plugins {
    id 'org.springframework.boot' version '2.5.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id "com.diffplug.spotless" version "5.14.3"
    id 'jacoco'
}

group = 'com.a2'
version = 'v0.1.0-HF.1'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

spotless {
    java {
        googleJavaFormat('1.7').aosp()
    }
}

compileJava.dependsOn 'spotlessApply'

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.8
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'

    implementation 'org.springdoc:springdoc-openapi-ui:1.5.10'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

}

test {
    useJUnitPlatform()
}
